Update ClassRandomizer.java
Fix for issue #443,
Simplification of logic for validateCharacterInventory